tests/NormalTests/paczka1/fuzzy1/38353461.err
Error in line 4: ENItYkaUG S75 35,5
Error in line 13: ENItYkaUG A187 46,4
Error in line 19: ENItYkaUG S75 99,5
Error in line 24: hJCsu5f S75 13,7
Error in line 14: QPEm6m S399 132,0
Error in line 27: ENItYkaUG S475 10,1
